--- a/home/templates/home/order_list.html
+++ b/home/templates/home/order_list.html
@@ -41,6 +41,10 @@
                     <i class="fas fa-search"></i>
                   </button>
                 </div>
+                <div style="margin-right: 10px;"></div>
+              <div class="ml-auto"> <!-- Кнопка "Edit" выравнивается справа -->
+                <a href="{% url 'new_computer' computer_id=computer.id %}" class="btn btn-primary">Create</a>
+              </div>
               </div>
             </form>
           </div>
