--- a/home/templates/home/forms/step2.html
+++ b/home/templates/home/forms/step2.html
@@ -1,52 +1,197 @@
-<div class="col-sm-8">   
+
+<link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" rel="stylesheet" />
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/inputmask/5.0.7-beta.22/jquery.inputmask.min.js"></script>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+<!-- AdminLTE CSS -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/admin-lte/3.1.0/css/adminlte.min.css">
+
+
+
+<script>
+    $(document).ready(function() {
+        function getCookie(name) {
+            let cookieValue = null;
+            if (document.cookie && document.cookie !== '') {
+                const cookies = document.cookie.split(';');
+                for (let i = 0; i < cookies.length; i++) {
+                    const cookie = cookies[i].trim();
+                    if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                        cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                        break;
+                    }
+                }
+            }
+            return cookieValue;
+        }
+    
+        const csrftoken = getCookie('csrftoken');
+    
+        $('#addUserBtn').click(function() {
+            var uniqueId = new Date().getTime();
+            var newUserRow = `
+                <div class="row user-row" data-user-id="${uniqueId}">
+                    <div class="col-sm-2">
+                        <div class="form-group track-changes">
+                            <label>User type</label>
+                            <input list="userList_${uniqueId}" name="user_type_${uniqueId}" class="form-control" placeholder="User type" style="width: 100%">
+                            <datalist id="userList_${uniqueId}">
+                                {% for choice in user_types %}
+                                <option value="{{ choice }}"></option>
+                                {% endfor %}
+                            </datalist>
+                        </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="form-group track-changes">
+                            <label>User name</label>
+                            <input type="text" class="form-control" name="user_name_${uniqueId}" placeholder="User name">
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="row">
+                            <div class="col-sm-10">
+                                <div class="form-group track-changes">
+                                    <label>User password</label>
+                                    <input type="text" class="form-control" name="password_${uniqueId}" placeholder="User password">
+                                </div>
+                            </div>
+                            <div class="col-sm-2 text-right" style="display: flex; align-items: center;">
+                                <button type="button" class="btn btn-link delete-user-btn text-danger p-0" data-user-id="${uniqueId}" style="height: 100%;">Delete</button>
+                            </div>
+                        </div>
+                    </div>
+                    <input type="hidden" name="new_user_${uniqueId}" value="true" />
+                </div>
+            `;
+            $('#new-users-container').append(newUserRow);
+        });
+    
+        $(document).on('click', '.delete-user-btn', function() {
+            var userId = $(this).data('user-id');
+            var $row = $(this).closest('.user-row');
+            console.log('Deleting user with ID:', userId);  // Debug log
+            $.ajax({
+                url: "{% url 'delete_user' %}",
+                method: 'POST',
+                headers: { 'X-CSRFToken': csrftoken },
+                data: { 'user_id': userId }
+            }).done(function(response) {
+                if (response.status === 'success') {
+                    console.log('User deleted successfully');  // Debug log
+                    $row.remove();
+                } else {
+                    console.error('Error deleting user:', response.message);
+                }
+            }).fail(function(xhr, status, error) {
+                console.error('Error deleting user: ' + error);
+                console.log('Response text:', xhr.responseText);
+            });
+        });
+    });
+    
+    
+  </script>
+
+  
+
+
+  <div class="row">
+<div class="col-sm-8" >   
     <div class="row">
-        <div class="col-sm-6">
+        <div class="col-sm-6" >
             <div class="form-group">
-                <label>Computer name</label>
-                {{ wizard.form.computer_name }}
+                <label for="{{ wizard.form.computer_name.id_for_label }}" class="form-label">
+                    {{ wizard.form.computer_name.label_tag }}
+                </label>
+                <input
+                    type="text"
+                    class="form-control"
+                    placeholder="Enter computer name"
+                    name="{{ wizard.form.computer_name.name }}"
+                    
+                    id="{{ wizard.form.computer_name.id_for_label }}"
+                >
+                
             </div>
         </div>
         <div class="col-sm-6">
             <div class="form-group">
-                <label>Computer series number</label>
-                {{ wizard.form.computer_series }}
+                <label for="{{ wizard.form.computer_series.id_for_label }}" class="form-label">
+                    {{ wizard.form.computer_series.label_tag }}
+                </label>
+                <input
+                    type="text"
+                    class="form-control"
+                    placeholder="Enter computer serial number"
+                    name="{{ wizard.form.computer_series.serial_number }}"
+                    
+                    id="{{ wizard.form.computer_series.id_for_label }}"
+                >
+                
             </div>
         </div>
     </div>
 
-    {% if users %}
-        {% for user in users %}
-            <div class="row user-row">
-                <div class="col-sm-2">
-                    <div class="form-group">
-                        <label>User type</label>
-                        {{ wizard.form.user_type }}
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="form-group">
-                        <label>User name</label>
-                        {{ wizard.form.user_name }}
-                    </div>
-                </div>
-                <div class="col-sm-6">
-                    <div class="form-group">
+
+    <div class="row user-row" data-user-id="{{ user.pk }}">
+        <div class="col-sm-2">
+            <div class="form-group track-changes">
+                <label>User type</label>
+                <input list="userList_{{ user.pk }}" id="usersInput_{{ user.pk }}" name="user_type_{{ user.pk }}" class="form-control" placeholder="User type" style="width: 100%" onblur="addNew()" onkeypress="handleKeyPress(event)">
+                <datalist id="userList_{{ user.pk }}">
+                    {% for choice in wizard.form.fields.user_type.choices %}
+                    <option value="{{ choice.1 }}">
+                    {% endfor %}       
+                </datalist>
+            </div>
+        </div>
+        <div class="col-sm-4" >
+            <div class="form-group track-changes">
+                <label>User name</label>
+                <input type="text" class="form-control" name="user_name_{{ user.pk }}" placeholder="User name" >
+            </div>
+        </div>
+        <div class="col-sm-6">
+            <div class="row">
+                <div class="col-sm-10">
+                    <div class="form-group track-changes">
                         <label>User password</label>
-                        {{ wizard.form.user_password }}
+                        <input type="text" class="form-control" name="password_{{ user.pk }}" placeholder="User password" >
                     </div>
                 </div>
+                <div class="col-sm-1 text-right" style="display: flex; align-items: center;">
+                    <button type="button" class="btn btn-link delete-user-btn text-danger p-0" data-user-id="{{ user.id }}" style="height: 100%;">Delete</button>
+                </div>
             </div>
-        {% endfor %}
-    {% endif %}
-
-    <div class="row">
-        <button type="button" id="addUserBtn" class="btn btn-primary">Add user</button>
+        </div>
     </div>
+
+    <div id="new-users-container"></div>
+  
+    
 </div>
 
-<div class="col-sm-4">
+<div class="col-sm-4" >
     <div class="form-group">
-        <label>Comment</label>
-        {{ wizard.form.computer_comment }}
+        <label for="{{ wizard.form.computer_comment.id_for_label }}" class="form-label">
+            {{ wizard.form.computer_comment.label_tag }}
+        </label>
+        <textarea
+            class="form-control"
+            placeholder="Enter a comment"
+            name="{{ wizard.form.computer_comment.addComment }}"
+            id="{{ wizard.form.computer_comment.id_for_label }}"
+        ></textarea>
+        
     </div>
 </div>
+</div>
+<div class="row">
+    <div class="col-sm-2" >
+    <button type="button" id="addUserBtn" class="btn btn-outline-primary btn-sm">Add user</button>
+</div></div>
+
